// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns matrix selection cells 1`] = `
[
  1,
  1,
  4,
  5,
  7,
  9,
]
`;

exports[`returns matrix selection cells 2`] = `
[
  1,
  1,
  4,
  5,
]
`;

exports[`returns matrix selection from cells 1`] = `
[
  1,
  1,
  4,
  5,
  7,
  9,
]
`;

exports[`returns matrix selection from cells 2`] = `
[
  1,
  1,
  4,
  5,
]
`;

exports[`returns matrix selection value of 1`] = `
[
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 1,
  },
  {
    "x": 1,
    "y": 1,
  },
  {
    "x": 0,
    "y": 2,
  },
  {
    "x": 2,
    "y": 2,
  },
]
`;

exports[`returns matrix selection value of 2`] = `
[
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 1,
  },
  {
    "x": 1,
    "y": 1,
  },
]
`;
